--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "ng2-modal",
-  "version": "1.0.0",
-  "description": "A simple modal for Angular2 using bootstrap",
-  "scripts": {
-    "typings-install": "./node_modules/.bin/typings install",
-    "postinstall": "npm run typings-install",
-    "build": "./node_modules/.bin/webpack --inline --colors --progress --display-error-details --display-cached",
-    "watch": "npm run build -- --watch",
-    "start": "./node_modules/.bin/webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src"
-  },
-  "author": [
-    "Poorva Vyas <poorvavysa29@gmail.com>"
-  ],
+  "name": "ng2-modal-dev",
+  "version": "0.0.0",
   "license": "MIT",
-  "homepage": "https://github.com/tixdo/ng2-modal/blob/master/README.md",
-  "devDependencies": {
-    "awesome-typescript-loader": "~0.16.2",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.35.0",
-    "reflect-metadata": "0.1.2",
-    "source-map-loader": "^0.1.5",
-    "typescript": "~1.8.9",
-    "typings": "^0.7.9",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-merge": "^0.8.4"
+  "angular-cli": {},
+  "scripts": {
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
   },
+  "private": true,
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
-    "core-js": "^2.2.0",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "~0.6.6"
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
-  "keywords": [
-    "Angular2",
-    "ng2-modal"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tixdo/ng2-modal"
+  "devDependencies": {
+    "@types/jasmine": "^2.2.30",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.18",
+    "codelyzer": "1.0.0-beta.1",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "~2.0.3"
   }
 }
