--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ng2-modal-dev",
-  "version": "0.0.0",
+  "name": "ng2-modal",
+  "version": "1.0.0",
   "license": "MIT",
+  "description": "A simple modal for Angular2 using bootstrap",
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
@@ -10,6 +11,13 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
+  "author": "Poorva Vyas <poorvavysa29@gmail.com>",
+  "contributors": [
+    {
+      "name": "Patric Vormstein",
+      "email": "pvormstein@googlemail.com"
+    }
+  ],
   "private": true,
   "dependencies": {
     "@angular/common": "~2.1.0",
